[workspace]
members = ["sodo", "sodo-py", "sodo-wasm"]
# Only check / build main crates by default (check all with `--workspace`)
default-members = ["sodo"]

resolver = "3"

[workspace.dependencies]
sodo = { path = "sodo" }
sodo-py = { path = "sodo-py" }
sodo-wasm = { path = "sodo-wasm" }

clap = { version = "4.5", features = ["derive"] }
getrandom = { version = "0.4", features = ["wasm_js"] }
js-sys = "0.3"
pyo3 = "^0.27"
rand = "0.9.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6"
wasm-bindgen = "0.2"

[profile.release]
lto = true           # Enable Link Time Optimization to remove unused code
codegen-units = 1    # Maximize optimization at the cost of slower compilation
strip = true         # Fully strip debug symbols; debugging in production will be difficult
