[package]
name = "sodo-wasm"
version = "0.2.1"
edition = "2024"
authors = ["ΣX <gitctrlx@gmail.com>"]
license = "MIT"
description = "WebAssembly bindings for sodo Sudoku library"
readme = "../README.md"
homepage = "https://github.com/pyroth/sodo"
repository = "https://github.com/pyroth/sodo"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
js-sys = { workspace = true }
getrandom = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde-wasm-bindgen = { workspace = true }
sodo = { workspace = true }
wasm-bindgen = { workspace = true }

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
