[package]
name = "sodo"
version = "0.2.6"
edition = "2024"
description = "Sudoku in Rust"
license = "MIT OR Apache-2.0"
readme = "../README.md"
homepage = "https://github.com/pyroth/sodo"
repository = "https://github.com/pyroth/sodo"

[[bin]]
name = "sodo"
path = "bin/main.rs"

[dependencies]
clap = { workspace = true }
rand = { workspace = true }
serde = { workspace = true, optional = true }

[features]
default = []
serde = ["dep:serde"]
